# guile-libinput

./: .gitignore  .guix-channel  Makefile.am  README  configure.ac  gen.scm  gen.scm.in  guix.scm  libinput.c  libinput.scm
.guix/modules/: guile-libinput-package.scm
examples/: example-1.scm
libinput/: config.scm.in
